force-app/main/default/src/objects/PJN_Care_Plan_Field__mdt/PJN_Care_Plan_Field__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Program Builder; Care Plan Path
Purpose: Define the field and icon to be displayed on the right-side boxes in the care plan path for a specific program problem.
Metadata Relationship(s): CarePlan Path Coaching Setting
Created by Mavens: Yes</description>
    <label>Care Plan Field</label>
    <pluralLabel>Care Plan Fields</pluralLabel>
</CustomObject>