force-app/main/default/src/objects/PJN_Care_Plan_Field__mdt/fields/PJN_CarePlan_Path_Coaching_Setting__c.field-meta.xml
<CustomField>
    <fullName>PJN_CarePlan_Path_Coaching_Setting__c</fullName>
    <inlineHelpText>Add CarePlan Path Coaching Setting value if Care Plan Field related to Stage. Leave blank if related to Program.</inlineHelpText>
    <label>CarePlan Path Coaching Setting</label>
    <referenceTo>PJN_CarePlan_Path_Coaching_Setting__mdt</referenceTo>
    <relationshipLabel>Care Plan Fields</relationshipLabel>
    <relationshipName>PJN_Care_Plan_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>