force-app/main/default/src/objects/PJN_Care_Plan_Field__mdt/fields/PJN_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_Label__c</fullName>
    <label>Field Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>