force-app/main/default/src/objects/PJN_Care_Plan_Field__mdt/fields/PJN_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Icon_Name__c</fullName>
    <defaultValue>&apos;standard:default&apos;</defaultValue>
    <label>Icon Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>