force-app/main/default/src/objects/PJN_Care_Plan_Field__mdt/fields/PJN_Icon_Size__c.field-meta.xml
<CustomField>
    <fullName>PJN_Icon_Size__c</fullName>
    <defaultValue>&apos;small&apos;</defaultValue>
    <label>Icon Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>x-small</fullName>
                <default>true</default>
                <label>x-small</label>
            </value>
            <value>
                <fullName>small</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>