force-app/main/default/src/objects/PJN_Care_Plan_Field__mdt/fields/PJN_Program__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program__c</fullName>
    <inlineHelpText>The Program this field belongs to.</inlineHelpText>
    <label>Program</label>
    <referenceTo>PJN_Program__mdt</referenceTo>
    <relationshipLabel>Care Plan Fields</relationshipLabel>
    <relationshipName>PJN_Care_Plan_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>