force-app/main/default/src/objects/PJN_Care_Plan_Field__mdt/listViews/PJN_All_Care_Plan_Fields.listView-meta.xml
<ListView>
    <fullName>PJN_All_Care_Plan_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Program__c</columns>
    <columns>PJN_CarePlan_Path_Coaching_Setting__c</columns>
    <columns>PJN_Field_API_Name__c</columns>
    <columns>PJN_Field_Label__c</columns>
    <columns>PJN_Icon_Name__c</columns>
    <columns>PJN_Icon_Size__c</columns>
    <columns>PJN_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Care Plan Fields</label>
    <language>en_US</language>
</ListView>